# wfcache-api

./: .gitignore  Cargo.toml  README.md
docs/: demo.tape
src/: action.rs  app.rs  args.rs  errors.rs  extract.rs  input.rs  main.rs  tui.rs
src/audio/: extract.rs  header.rs  mod.rs  ogg.rs  opus.rs
src/common/: ls.rs  mod.rs
src/metadata/: metadata.rs  mod.rs
src/music/: extract.rs  mod.rs
src/shell/: cd.rs  error.rs  handler.rs  helper.rs  ls.rs  mod.rs  pwd.rs  stat.rs  state.rs
src/shell/command/: cd.rs  find.rs  get.rs  ls.rs  mod.rs  pwd.rs  stat.rs
src/texture/: extract.rs  header.rs  mod.rs
src/utils/: cache.rs  extract.rs  mod.rs  path.rs  utils.rs
src/utils/header/: arguments.rs  header.rs  image.rs  mod.rs
src/utils/metadata/: metadata.rs
src/widgets/: button.rs  explorer.rs  extract.rs  info.rs  mod.rs
src/widgets/button/: button.rs  event.rs  mod.rs  state.rs  theme.rs  widget.rs
src/widgets/explorer/: explorer.rs  mod.rs  theme.rs  widget.rs
src/widgets/extract/: button.rs  extract.rs  gauge.rs  mod.rs
src/widgets/info/: info.rs
