[package]
name = "wfcache-api"
version = "0.9.5"
edition = "2021"
authors = ["Youn Mélois <youn@melois.dev>"]
repository = "https://github.com/sehnryr/wfcache-api"
homepage = "https://github.com/sehnryr/wfcache-api"
description = "Application that allows you to read and extract data from Warframe's cache files programmatically"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["warframe", "cache", "decompression", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
# ddsfile = "0.5.2"
derivative = "2.2.0"
futures = "0.3.30"
# env_logger = "0.11.1"
indoc = "2.0.5"
# itertools = "0.12.1"
# log = "0.4.20"
lotus-lib = "3.0.1"
lotus-utils-audio = "0.1.0"
lotus-utils-texture = "0.1.0"
# lscolors = { version = "0.17.0", features = ["ansi_term"] }
# rand = "0.8.5"
ratatui = { version = "0.26.1", features = ["unstable-widget-ref"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
# relative-path = "1.9.2"
# rustyline = "10.1.1"
# serde_json = "1.0.113"
# term_grid = "0.1.7"
# terminal_size = "0.3.0"
