[package]
name = "wfcache-api"
version = "0.9.5"
edition = "2021"
authors = ["Youn Mélois <youn@melois.dev>"]
repository = "https://github.com/sehnryr/wfcache-api"
homepage = "https://github.com/sehnryr/wfcache-api"
description = "Application that allows you to read and extract data from Warframe's cache files programmatically"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["warframe", "cache", "decompression", "cli", "tui"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
derivative = "2.2.0"
futures = "0.3.30"
indoc = "2.0.5"
lotus-lib = "4.0.0"
lotus-utils-audio = "0.1.1"
lotus-utils-texture = "0.1.1"
ratatui = { version = "0.26.1", features = ["unstable-widget-ref"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
